prodMetadata/src/objects/Campaign_Image__c.object
<CustomObject>
    <description>Child object to attach images, in order to circumvent limited campaign permissions</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Images</relationshipLabel>
        <relationshipName>Campaign_Images</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <description>Embed just the image in this field</description>
        <inlineHelpText>Embed just the image in this field by clicking the little Image button on the toolbar.</inlineHelpText>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Thumbnail</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Campaign Image</label>
    <nameField>
        <displayFormat>CmpImg-{00000}</displayFormat>
        <label>Campaign image Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>